--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ Licence URI: https://www.os-templates.com/template-terms
   <div id="pageintro" class="hoc clear"> 
     <!-- ################################################################################################ -->
     <article>
-      <p>ghoozie</p>
+      <p>carnegie</p>
       <h3 class="heading">ghoozie</h3>
       <footer>
         <ul class="nospace inline pushright">
