--- a/index.html
+++ b/index.html
@@ -198,7 +198,8 @@ Licence URI: https://www.os-templates.com/template-terms
       <p>Magnis dis parturient montes nascetur ridiculus mus sed in dui</p>
     </div>
     <div class="group team">
-      <figure class="one_quarter first"><a class="imgover" href="#"><img src="images/demo/320x320.png" alt=""></a>
+      <figure class="one_quarter first"><a class="imgover" href="#"><img
+              src="images/demo/oliver_pic.jpg" alt=""></a>
         <figcaption>
           <h6 class="heading">A. Doe</h6>
           <em>Director</em>
