--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
             
                 <div class="col-md-6 text-right">
-                    <img src="assets/img/alex-vidal.png" alt="alex-vidal">
+                    <img src="oliver_pic.jpg" alt="oliver-terrell">
                 </div>
 
             </div>
