--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
             <div class="row">
 
                 <div class="col-md-6">
-                    <h1>Alex Vidal</h1>
+                    <h1>Oliver Terrell</h1>
                     <div class="page-scroll">
-                        <p class="job-title">Full Stack Developer</p>
+                        <p class="job-title">Freelancer Extraordinaire</p>
                         <a href="#contact" class="btn btn-fill ">Hire me</a>
                         <div class="clearfix visible-xxs"></div>
                         <a href="#portfolio" class="btn btn-border">Explore more</a>
