--- a/index.html
+++ b/index.html
@@ -107,8 +107,11 @@
                     <div class="col-md-6 col-md-offset-3">
                         <h2>About</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
-                        <p>Hello! I'm Alex, a full stuck developer, a Ruby enthusiast, and a guy slighty obsessed for code quality. Also I'm a co-founder of pykod.com. I’m currently available for freelance work. If you have a project that you want to get started or think you need my help with something, then get in touch.</p>
-                        <a href="http://www.grad.illinois.edu/sites/default/files/pdfs/cvsamples.pdf" class="btn btn-fill" target="_blank" download>Download my cv</a>
+                        <p>Carnegie Mellon University 2019<br>Neuroscience<br><br>
+                            Integrative Bodywork School of Massage Therapy 2015<br><br>
+                            Author @ <a href="http://www.square1system.com" target="_blank">Square1™</a><br><br>
+                            Web Developer/Testing Intern @ <a href="https://uncommoncore.io" target="_blank">UncommonCore</a><br></p>
+                        <a href="https://ghoozie.tk/oliver_resume.pdf" class="btn btn-fill" target="_blank" download>Download my cv</a>
                     </div>
                 </div>
             </div>
