added library proficiencies (2/3)

--- a/index.html
+++ b/index.html
@@ -109,8 +109,9 @@
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                         <p>Carnegie Mellon University 2019<br>Neuroscience<br><br>
                             Integrative Bodywork School of Massage Therapy 2015<br><br>
-                            Author @ <a href="http://www.square1system.com" target="_blank">Square1™</a><br><br>
-                            Web Developer/Testing Intern @ <a href="https://uncommoncore.io" target="_blank">UncommonCore</a><br></p>
+                            Web Developer/Testing Intern @ <a href="https://uncommoncore.io" target="_blank">UncommonCore</a><br><br>
+                            Author @ <a href="http://www.square1system.com" target="_blank">Square1™</a><br>
+                            </p>
                         <a href="https://ghoozie.tk/oliver_resume.pdf" class="btn btn-fill" target="_blank" download>Download my cv</a>
                     </div>
                 </div>
@@ -120,49 +121,49 @@
         <section class="site-section section-skills">
             <div class="container">
                 <div class="text-center">
-                    <h3>My Skills</h3>
+                    <h3>Coding Skills</h3>
                     <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                 </div>
                 <div class="row">
                     <div class="col-md-4">
                         <div class="skill">
-                            <h4>Html/css</h4>
+                            <h4>Python</h4>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" data-transitiongoal="100"></div><!-- /.progress-bar -->
                             </div><!-- /.progress -->
                         </div><!-- /.skill -->
                         <div class="skill">
-                            <h4>Python</h4>
+                            <h4>Neural Networks</h4>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="75"></div><!-- /.progress-bar -->
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="70"></div><!-- /.progress-bar -->
                             </div><!-- /.progress -->
                         </div><!-- /.skill -->
                     </div>
                     <div class="col-md-4">
                         <div class="skill">
-                            <h4>Javascript</h4>
+                            <h4>HTML/CSS</h4>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="82"></div><!-- /.progress-bar -->
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="85"></div><!-- /.progress-bar -->
                             </div><!-- /.progress -->
                         </div><!-- /.skill -->
                         <div class="skill">
-                            <h4>Ruby</h4>
+                            <h4>php</h4>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="66"></div><!-- /.progress-bar -->
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="80"></div><!-- /.progress-bar -->
                             </div><!-- /.progress -->
                         </div><!-- /.skill -->
                     </div>
                     <div class="col-md-4">
                         <div class="skill">
-                            <h4>Php</h4>
+                            <h4>SQL</h4>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="97"></div><!-- /.progress-bar -->
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="90"></div><!-- /.progress-bar -->
                             </div><!-- /.progress -->
                         </div><!-- /.skill -->
                         <div class="skill">
-                            <h4>Java</h4>
+                            <h4>Docker/Kubernetes</h4>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="45"></div><!-- /.progress-bar -->
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="80"></div><!-- /.progress-bar -->
                             </div><!-- /.progress -->
                         </div><!-- /.skill -->
                     </div>
@@ -174,21 +175,21 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h3>What i do</h3>
+                        <h3>Python Library Proficiencies</h3>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
-                            <img src="assets/img/front-end.svg" alt="Front End Developer">
-                            <h4>Front-end</h4>
-                            <p>As a javascript developer, I have experience in HTML5 and CSS3 techniques working with jQuery or more advanced javascript MVC frameworks such as angular</p>
+                            <img src="assets/img/selenium-logo.png" width="50" height="45" alt="Selenium with Python">
+                            <h4>Selenium</h4>
+                            <p>With UncommonCore, wrote extensive automated testing functions using Selenium that cleanly and quickly allowed our team to move through developmental phase.</p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
-                            <img src="assets/img/back-end.svg" alt="Back End Developer">
-                            <h4>Back-end</h4>
-                            <p>Utilising php frameworks such as Zend or creating bespoke code, I've written services supporting thousands of users, including REST APIs, e-learning applications and more.</p>
+                            <img src="assets/img/scikit-learn-logo-small.png" width="124" height="45" alt="scikit-learn">
+                            <h4>skLearn</h4>
+                            <p>Enjoying learning how to use skLearn to its full potential. skLearn makes it simple to code a basic ML network, but to write really good networks is a challenge I embrace.</p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-sm-4">
