--- a/index.html
+++ b/index.html
@@ -194,9 +194,9 @@
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
-                            <img src="assets/img/consultancy.svg" alt="Coding">
-                            <h4>Consultancy</h4>
-                            <p>As well as providing development services, I can also help you decide strategic roadmaps via consultancy services.</p>
+                            <img src="assets/img/pygame-logo.gif" width="152" height="45" alt="NumPy">
+                            <h4>PyGame</h4>
+                            <p>As a pet project I am developing an adventure game using a lot of PyGame. The game will be hosted on the web and hopefully very fun to play! Stay tuned for further developments.</p>
                         </div><!-- /.service -->
                     </div>
                 </div>
@@ -206,7 +206,7 @@
         <section id="portfolio" class="site-section section-portfolio">
             <div class="container">
                 <div class="text-center">
-                    <h3>My recent Works</h3>
+                    <h3>Current Projects</h3>
                     <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                 </div>
                 <div class="row">
@@ -214,7 +214,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/portfolio-1.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Project Title</h4>
+                                <h4>UncommonCore</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="#"><span class="glyphicon glyphicon-link"></span></a>
                             </div><!-- /.portfolio-item-info -->
@@ -345,11 +345,11 @@
             <img class="img-res" src="assets/img/portfolio-1.jpg" alt="">
           </div>
           <div class="modal-body">
-            <h4 class="modal-title">Project title</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec commodo finibus tristique. Maecenas dignissim condimentum sem eu tincidunt. Curabitur in dui quis magna vestibulum pulvinar a ut urna. Nam pellentesque mattis urna. Aenean eget lectus sit amet turpis facilisis consectetur quis vel ante. Integer in massa ut nibh ultricies sagittis imperdiet in ante. Nam sed turpis vel ante placerat feugiat ac tempus magna. Nam aliquet ullamcorper dolor non hendrerit.</p>
+            <h4 class="modal-title">UncommonCore</h4>
+            <p>UncommonCore is the AI solution our educational system needs in America. We use machine learning networks to create and grade schoolwork packets for math students at the elementary school level, all while delivering a clean and easy interface for parents and teachers to keep track of their kids. Let UncommonCore do the grunt work so you can focus on teaching concepts. Build love and confidence in the classroom and let us handle the menial details.</p>
           </div>
           <div class="modal-footer">
-            <a href="#" class="btn btn-fill">Visit Page</a>
+            <a href="https://uncommoncore.io" class="btn btn-fill" target="_blank">Visit Page</a>
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
