--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <p class="job-title">Freelancer Extraordinaire</p>
                         <a href="#contact" class="btn btn-fill ">Hire me</a>
                         <div class="clearfix visible-xxs"></div>
-                        <a href="#portfolio" class="btn btn-border">Explore more</a>
+                        <a href="#about" class="btn btn-border">Explore more</a>
                     </div>
                 </div>
             
@@ -109,7 +109,7 @@
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                         <p>Carnegie Mellon University 2019<br>Neuroscience<br><br>
                             Integrative Bodywork School of Massage Therapy 2015<br><br>
-                            Web Developer/Testing Intern @ <a href="https://uncommoncore.io" target="_blank">UncommonCore</a><br><br>
+                            Web Developer/Testing Intern @ <a href="https://uncommoncore.io" target="_blank">Uncommon Core</a><br><br>
                             Author @ <a href="http://www.square1system.com" target="_blank">Square1™</a><br>
                             </p>
                         <a href="https://ghoozie.tk/oliver_resume.pdf" class="btn btn-fill" target="_blank" download>Download my cv</a>
@@ -182,7 +182,7 @@
                         <div class="service">
                             <img src="assets/img/selenium-logo.png" width="50" height="45" alt="Selenium with Python">
                             <h4>Selenium</h4>
-                            <p>With UncommonCore, wrote extensive automated testing functions using Selenium that cleanly and quickly allowed our team to move through developmental phase.</p>
+                            <p>With Uncommon Core, wrote extensive automated testing functions using Selenium that cleanly and quickly allowed our team to move through developmental phase.</p>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-sm-4">
@@ -212,64 +212,64 @@
                 <div class="row">
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-1.jpg" class="img-res" alt="">
+                            <img src="assets/img/uncommon-core-logo.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>UncommonCore</h4>
+                                <h4>Uncommon Core</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span class="glyphicon glyphicon-eye-open"></span></a>
-                                <a href="#"><span class="glyphicon glyphicon-link"></span></a>
+                                <a href="https://uncommoncore.io" target="_blank"><span class="glyphicon glyphicon-link"></span></a>
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/portfolio-2.jpg" class="img-res" alt="">
+                            <img src="assets/img/square1-logo-square.png" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Project Title</h4>
+                                <h4>Square1™</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem2"><span class="glyphicon glyphicon-eye-open"></span></a>
-                                <a href="#"><span class="glyphicon glyphicon-link"></span></a>
+                                <a href="http://www.square1system.com" target="_blank"><span class="glyphicon glyphicon-link"></span></a>
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
                     </div>
-                    <div class="col-md-4 col-xs-6">
-                        <div class="portfolio-item">
-                            <img src="assets/img/portfolio-3.jpg" class="img-res" alt="">
-                            <div class="portfolio-item-info">
-                                <h4>Project Title</h4>
-                                <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span class="glyphicon glyphicon-eye-open"></span></a>
-                                <a href="#"><span class="glyphicon glyphicon-link"></span></a>
-                            </div><!-- /.portfolio-item-info -->
-                        </div><!-- /.portfolio-item -->
-                    </div>
-                    <div class="col-md-4 col-xs-6">
-                        <div class="portfolio-item">
-                            <img src="assets/img/portfolio-4.jpg" class="img-res" alt="">
-                            <div class="portfolio-item-info">
-                                <h4>Project Title</h4>
-                                <a href="#" data-toggle="modal" data-target="#portfolioItem4"><span class="glyphicon glyphicon-eye-open"></span></a>
-                                <a href="#"><span class="glyphicon glyphicon-link"></span></a>
-                            </div><!-- /.portfolio-item-info -->
-                        </div><!-- /.portfolio-item -->
-                    </div>
-                    <div class="col-md-4 col-xs-6">
-                        <div class="portfolio-item">
-                            <img src="assets/img/portfolio-5.jpg" class="img-res" alt="">
-                            <div class="portfolio-item-info">
-                                <h4>Project Title</h4>
-                                <a href="#" data-toggle="modal" data-target="#portfolioItem5"><span class="glyphicon glyphicon-eye-open"></span></a>
-                                <a href="#"><span class="glyphicon glyphicon-link"></span></a>
-                            </div><!-- /.portfolio-item-info -->
-                        </div><!-- /.portfolio-item -->
-                    </div>
-                    <div class="col-md-4 col-xs-6">
-                        <div class="portfolio-item">
-                            <img src="assets/img/portfolio-6.jpg" class="img-res" alt="">
-                            <div class="portfolio-item-info">
-                                <h4>Project Title</h4>
-                                <a href="#" data-toggle="modal" data-target="#portfolioItem6"><span class="glyphicon glyphicon-eye-open"></span></a>
-                                <a href="#"><span class="glyphicon glyphicon-link"></span></a>
-                            </div><!-- /.portfolio-item-info -->
-                        </div><!-- /.portfolio-item -->
-                    </div>
+<!--                    <div class="col-md-4 col-xs-6">-->
+<!--                        <div class="portfolio-item">-->
+<!--                            <img src="assets/img/portfolio-3.jpg" class="img-res" alt="">-->
+<!--                            <div class="portfolio-item-info">-->
+<!--                                <h4>Project Title</h4>-->
+<!--                                <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span class="glyphicon glyphicon-eye-open"></span></a>-->
+<!--                                <a href="#"><span class="glyphicon glyphicon-link"></span></a>-->
+<!--                            </div>&lt;!&ndash; /.portfolio-item-info &ndash;&gt;-->
+<!--                        </div>&lt;!&ndash; /.portfolio-item &ndash;&gt;-->
+<!--                    </div>-->
+<!--                    <div class="col-md-4 col-xs-6">-->
+<!--                        <div class="portfolio-item">-->
+<!--                            <img src="assets/img/portfolio-4.jpg" class="img-res" alt="">-->
+<!--                            <div class="portfolio-item-info">-->
+<!--                                <h4>Project Title</h4>-->
+<!--                                <a href="#" data-toggle="modal" data-target="#portfolioItem4"><span class="glyphicon glyphicon-eye-open"></span></a>-->
+<!--                                <a href="#"><span class="glyphicon glyphicon-link"></span></a>-->
+<!--                            </div>&lt;!&ndash; /.portfolio-item-info &ndash;&gt;-->
+<!--                        </div>&lt;!&ndash; /.portfolio-item &ndash;&gt;-->
+<!--                    </div>-->
+<!--                    <div class="col-md-4 col-xs-6">-->
+<!--                        <div class="portfolio-item">-->
+<!--                            <img src="assets/img/portfolio-5.jpg" class="img-res" alt="">-->
+<!--                            <div class="portfolio-item-info">-->
+<!--                                <h4>Project Title</h4>-->
+<!--                                <a href="#" data-toggle="modal" data-target="#portfolioItem5"><span class="glyphicon glyphicon-eye-open"></span></a>-->
+<!--                                <a href="#"><span class="glyphicon glyphicon-link"></span></a>-->
+<!--                            </div>&lt;!&ndash; /.portfolio-item-info &ndash;&gt;-->
+<!--                        </div>&lt;!&ndash; /.portfolio-item &ndash;&gt;-->
+<!--                    </div>-->
+<!--                    <div class="col-md-4 col-xs-6">-->
+<!--                        <div class="portfolio-item">-->
+<!--                            <img src="assets/img/portfolio-6.jpg" class="img-res" alt="">-->
+<!--                            <div class="portfolio-item-info">-->
+<!--                                <h4>Project Title</h4>-->
+<!--                                <a href="#" data-toggle="modal" data-target="#portfolioItem6"><span class="glyphicon glyphicon-eye-open"></span></a>-->
+<!--                                <a href="#"><span class="glyphicon glyphicon-link"></span></a>-->
+<!--                            </div>&lt;!&ndash; /.portfolio-item-info &ndash;&gt;-->
+<!--                        </div>&lt;!&ndash; /.portfolio-item &ndash;&gt;-->
+<!--                    </div>-->
                 </div>
             </div>
         </section><!-- /.secton-portfolio -->
@@ -279,15 +279,15 @@
                 <div class="row">
                     <div class="col-sm-4 col-xs-12">
                         <p class="counter start" data-to="10" data-speed="2000">0</p>
-                        <h4>Years Experience</h4>
+                        <h4>Years Experience<br><br>Health & Fitness</h4>
                     </div>
                     <div class="col-sm-4 col-xs-12">
-                        <p class="counter start" data-to="120" data-speed="2000">0</p>       
-                        <h4>Projects Delivered</h4>      
+                        <p class="counter start" data-to="2" data-speed="1000">0</p>
+                        <h4>Professional Fields<br>+<br>Collegiate Varsity Sports</h4>
                     </div>
                     <div class="col-sm-4 col-xs-12">
-                        <p id="infinity" class="counter" data-from="0" data-to="1" data-speed="1000">0</p>
-                        <h4>Seconds on this site!<br>What are you waiting for?</h4>
+                        <p class="counter start" data-to="5" data-speed="1500">0</p>
+                        <h4>Engaging Hobbies<br><br>Ask me about them!</h4>
                     </div>
                 </div>
             </div>
@@ -342,11 +342,11 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-1.jpg" alt="">
+            <img class="img-res" src="assets/img/uncommon-core-logo.jpg" alt="uncommon core">
           </div>
           <div class="modal-body">
-            <h4 class="modal-title">UncommonCore</h4>
-            <p>UncommonCore is the AI solution our educational system needs in America. We use machine learning networks to create and grade schoolwork packets for math students at the elementary school level, all while delivering a clean and easy interface for parents and teachers to keep track of their kids. Let UncommonCore do the grunt work so you can focus on teaching concepts. Build love and confidence in the classroom and let us handle the menial details.</p>
+            <h4 class="modal-title">Uncommon Core</h4>
+            <p>Uncommon Core is the AI solution our educational system needs in America. We use machine learning networks to create and grade schoolwork packets for math students at the elementary school level, all while delivering a clean and easy interface for parents and teachers to keep track of their kids. Let Uncommon Core do the grunt work so you can focus on teaching concepts. Build love and confidence in the classroom and let us handle the menial details.</p>
           </div>
           <div class="modal-footer">
             <a href="https://uncommoncore.io" class="btn btn-fill" target="_blank">Visit Page</a>
@@ -360,14 +360,14 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-2.jpg" alt="">
+            <img class="img-res" src="assets/img/square1-logo-square.png" alt="Square1™">
           </div>
           <div class="modal-body">
-            <h4 class="modal-title">Project title</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec commodo finibus tristique. Maecenas dignissim condimentum sem eu tincidunt. Curabitur in dui quis magna vestibulum pulvinar a ut urna. Nam pellentesque mattis urna. Aenean eget lectus sit amet turpis facilisis consectetur quis vel ante. Integer in massa ut nibh ultricies sagittis imperdiet in ante. Nam sed turpis vel ante placerat feugiat ac tempus magna. Nam aliquet ullamcorper dolor non hendrerit.</p>
+            <h4 class="modal-title">Square1™</h4>
+            <p>Square1™ is the first-ever PT modality that acts as a complete system for the neuromechanical system of the human body. Our proprietary method assesses each client's body in real time; a simple interview to identify what the body needs at that exact moment, then feeds the appropriate neuronal intervention to correct it. To learn more please get in touch with us on our website below!</p>
           </div>
           <div class="modal-footer">
-            <a href="#" class="btn btn-fill">Visit Page</a>
+            <a href="http://www.square1system.com" class="btn btn-fill" target="_blank">Visit Page</a>
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
