changed css bg pics

--- a/index.html
+++ b/index.html
@@ -141,9 +141,9 @@
                     </div>
                     <div class="col-md-4">
                         <div class="skill">
-                            <h4>HTML/CSS</h4>
+                            <h4>HTML</h4>
                             <div class="progress">
-                                <div class="progress-bar" role="progressbar" data-transitiongoal="85"></div><!-- /.progress-bar -->
+                                <div class="progress-bar" role="progressbar" data-transitiongoal="90"></div><!-- /.progress-bar -->
                             </div><!-- /.progress -->
                         </div><!-- /.skill -->
                         <div class="skill">
@@ -272,7 +272,7 @@
 <!--                    </div>-->
                 </div>
             </div>
-        </section><!-- /.secton-portfolio -->
+        </section><!-- /.section-portfolio -->
 
         <section class="site-section section-counters text-center">
             <div class="container">
