--- a/index.html
+++ b/index.html
@@ -307,10 +307,10 @@
                             <input type="email" name="email" class="form-control" placeholder="Email" required>   
                         </div>
                         <div class="col-sm-12">
-                            <textarea name="message" id="mesaage" class="form-control" placeholder="Message" required></textarea>
+                            <textarea name="message" id="message" class="form-control" placeholder="Message" required></textarea>
                         </div>
                     </div>
-                    <button href="#" class="btn btn-border" type="submit">Hire Me <span class="glyphicon glyphicon-send"></span></button>
+                    <button href="mailto:ost@alumni.cmu.edu" class="btn btn-border" type="submit">Send Mail <span class="glyphicon glyphicon-send"></span></button>
                 </form>
             </div>
         </section><!-- /.section-form -->
