--- a/index.html
+++ b/index.html
@@ -299,18 +299,19 @@
                 <h3>Contact</h3>
                 <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                 <form>
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <input type="text" name="name" class="form-control mt-x-0" placeholder="Name" required>
-                        </div>
-                        <div class="col-sm-6">
-                            <input type="email" name="email" class="form-control" placeholder="Email" required>   
-                        </div>
-                        <div class="col-sm-12">
-                            <textarea name="message" id="message" class="form-control" placeholder="Message" required></textarea>
-                        </div>
-                    </div>
-                    <button href="mailto:ost@alumni.cmu.edu" class="btn btn-border" type="submit">Send Mail <span class="glyphicon glyphicon-send"></span></button>
+                    <h5>Please reach out via email first.<br><br><br>Thanks!!</h5>
+<!--                    <div class="row">-->
+<!--                        <div class="col-sm-6">-->
+<!--                            <input type="text" name="name" class="form-control mt-x-0" placeholder="Name" required>-->
+<!--                        </div>-->
+<!--                        <div class="col-sm-6">-->
+<!--                            <input type="email" name="email" class="form-control" placeholder="Email" required>   -->
+<!--                        </div>-->
+<!--                        <div class="col-sm-12">-->
+<!--                            <textarea name="message" id="message" class="form-control" placeholder="Message" required></textarea>-->
+<!--                        </div>-->
+<!--                    </div>-->
+                    <a class="btn btn-border" href="mailto:ost@alumni.cmu.edu?" subject="Message from Portfolio Website"  type="submit">Email <span class="glyphicon glyphicon-send"></span></a>
                 </form>
             </div>
         </section><!-- /.section-form -->
