--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <h1>Oliver Terrell</h1>
                     <div class="page-scroll">
                         <p class="job-title">Freelancer Extraordinaire</p>
-                        <a href="#contact" class="btn btn-fill ">Hire me</a>
+                        <a href="#contact" class="btn btn-fill ">Contact Me</a>
                         <div class="clearfix visible-xxs"></div>
                         <a href="#about" class="btn btn-border">Explore more</a>
                     </div>
