--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <p class="job-title">Freelancer Extraordinaire</p>
                         <a href="#contact" class="btn btn-fill ">Contact Me</a>
                         <div class="clearfix visible-xxs"></div>
-                        <a href="#about" class="btn btn-border">Explore more</a>
+                        <a href="#about" class="btn btn-border">Explore More</a>
                     </div>
                 </div>
             
@@ -109,8 +109,9 @@
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                         <p>Carnegie Mellon University 2019<br>Neuroscience<br><br>
                             Integrative Bodywork School of Massage Therapy 2015<br><br>
-                            Web Developer/Testing Intern @ <a href="https://uncommoncore.io" target="_blank">Uncommon Core</a><br><br>
-                            Author @ <a href="http://www.square1system.com" target="_blank">Square1™</a><br>
+                            Web Developer @ <a href="https://uncommoncore.io" target="_blank">Uncommon Core</a><br><br>
+                            Author @ <a href="http://www.square1system.com" target="_blank">Square1™</a><br><br>
+                            Intern @ <a href="https://www.delitor.com" target="_blank">Delitor</a><br>
                             </p>
                         <a href="https://ghoozie.tk/oliver_resume.pdf" class="btn btn-fill" target="_blank" download>Download my cv</a>
                     </div>
@@ -230,16 +231,16 @@
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
                     </div>
-<!--                    <div class="col-md-4 col-xs-6">-->
-<!--                        <div class="portfolio-item">-->
-<!--                            <img src="assets/img/portfolio-3.jpg" class="img-res" alt="">-->
-<!--                            <div class="portfolio-item-info">-->
-<!--                                <h4>Project Title</h4>-->
-<!--                                <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span class="glyphicon glyphicon-eye-open"></span></a>-->
-<!--                                <a href="#"><span class="glyphicon glyphicon-link"></span></a>-->
-<!--                            </div>&lt;!&ndash; /.portfolio-item-info &ndash;&gt;-->
-<!--                        </div>&lt;!&ndash; /.portfolio-item &ndash;&gt;-->
-<!--                    </div>-->
+                    <div class="col-md-4 col-xs-6">
+                        <div class="portfolio-item">
+                            <img src="assets/img/delitor-logo.png" class="img-res" alt="">
+                            <div class="portfolio-item-info">
+                                <h4>Delitor</h4>
+                                <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span class="glyphicon glyphicon-eye-open"></span></a>
+                                <a href="https://www.delitor.com" target="_blank"><span class="glyphicon glyphicon-link"></span></a>
+                            </div><!-- /.portfolio-item-info -->
+                        </div><!-- /.portfolio-item -->
+                    </div>
 <!--                    <div class="col-md-4 col-xs-6">-->
 <!--                        <div class="portfolio-item">-->
 <!--                            <img src="assets/img/portfolio-4.jpg" class="img-res" alt="">-->
@@ -379,14 +380,14 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/portfolio-3.jpg" alt="">
+            <img class="img-res" src="assets/img/delitor-logo.png" alt="">
           </div>
           <div class="modal-body">
-            <h4 class="modal-title">Project title</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec commodo finibus tristique. Maecenas dignissim condimentum sem eu tincidunt. Curabitur in dui quis magna vestibulum pulvinar a ut urna. Nam pellentesque mattis urna. Aenean eget lectus sit amet turpis facilisis consectetur quis vel ante. Integer in massa ut nibh ultricies sagittis imperdiet in ante. Nam sed turpis vel ante placerat feugiat ac tempus magna. Nam aliquet ullamcorper dolor non hendrerit.</p>
+            <h4 class="modal-title">Delitor</h4>
+            <p>Working with the founder of Delitor, ex Armed Forces Serviceman Glenn Devitt, I am assuming an unpaid internship role with his upcoming project aimed at attacking the issue of soldier suicide. Delitor has had great success in its efforts to end child trafficking and I am thrilled to be working on this new project with them as I learn blackhat-style coding modalities.</p>
           </div>
           <div class="modal-footer">
-            <a href="#" class="btn btn-fill">Visit Page</a>
+            <a href="https://www.delitor.com" target="_blank" class="btn btn-fill">Visit Page</a>
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
