fixed mobile look at top

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="col-md-6">
                     <h1>Oliver Terrell</h1>
                     <div class="page-scroll">
-                        <p class="job-title">Available for Full-Time Positions<br><br>Inquire Below:</p>
+                        <p class="job-title">Available for Full-Time Positions<br>Inquire Below:</p>
                         <a href="#contact" class="btn btn-fill ">Contact Me</a>
                         <div class="clearfix visible-xxs"></div>
                         <a href="#about" class="btn btn-border">Explore More</a>
