--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="col-md-6">
                     <h1>Oliver Terrell</h1>
                     <div class="page-scroll">
-                        <p class="job-title">Available for Full-Time Positions<br>Inquire Below:</p>
+                        <p class="job-title">Available for Full-Time Positions<br><br>Inquire Below:</p>
                         <a href="#contact" class="btn btn-fill ">Contact Me</a>
                         <div class="clearfix visible-xxs"></div>
                         <a href="#about" class="btn btn-border">Explore More</a>
@@ -225,7 +225,7 @@
                         <div class="portfolio-item">
                             <img src="assets/img/square1-logo-square.png" class="img-res" alt="">
                             <div class="portfolio-item-info">
-                                <h4>Square1™</h4>
+                                <h4>Square1</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem2"><span class="glyphicon glyphicon-eye-open"></span></a>
                                 <a href="http://www.square1system.com" target="_blank"><span class="glyphicon glyphicon-link"></span></a>
                             </div><!-- /.portfolio-item-info -->
@@ -362,11 +362,11 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/square1-logo-square.png" alt="Square1™">
+            <img class="img-res" src="assets/img/square1-logo-square.png" alt="Square1">
           </div>
           <div class="modal-body">
-            <h4 class="modal-title">Square1™</h4>
-            <p>Square1™ is the first-ever PT modality that acts as a complete system for the neuromechanical system of the human body. Our proprietary method assesses each client's body in real time; a simple interview to identify what the body needs at that exact moment, then feeds the appropriate neuronal intervention to correct it. To learn more please get in touch with us on our website below!</p>
+            <h4 class="modal-title">Square1</h4>
+            <p>Square1 is the first-ever PT modality that acts as a complete system for the neuromechanical system of the human body. Our proprietary method assesses each client's body in real time; a simple interview to identify what the body needs at that exact moment, then feeds the appropriate neuronal intervention to correct it. To learn more please get in touch with us on our website below!</p>
           </div>
           <div class="modal-footer">
             <a href="http://www.square1system.com" class="btn btn-fill" target="_blank">Visit Page</a>
