--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                         <p>Carnegie Mellon University 2019<br>Neuroscience<br><br>
                             Integrative Bodywork School of Massage Therapy 2015<br><br>
-                            Web Developer @ <a href="https://uncommoncore.io" target="_blank">Uncommon Core</a><br><br>
+                            Developer @ <a href="https://uncommoncore.io" target="_blank">Uncommon Core</a><br><br>
                             Author @ <a href="http://www.square1system.com" target="_blank">Square1™</a><br><br>
                             Intern @ <a href="https://www.delitor.com" target="_blank">Delitor</a><br>
                             </p>
