--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="skill">
-                            <h4>HTML</h4>
+                            <h4>HTML/CSS</h4>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" data-transitiongoal="90"></div><!-- /.progress-bar -->
                             </div><!-- /.progress -->
@@ -162,7 +162,7 @@
                             </div><!-- /.progress -->
                         </div><!-- /.skill -->
                         <div class="skill">
-                            <h4>Docker/Kubernetes</h4>
+                            <h4>Kubernetes</h4>
                             <div class="progress">
                                 <div class="progress-bar" role="progressbar" data-transitiongoal="80"></div><!-- /.progress-bar -->
                             </div><!-- /.progress -->
