new resume, new counter

--- a/index.html
+++ b/index.html
@@ -287,8 +287,8 @@
                         <h4>Professional Fields<br>+<br>Collegiate Varsity Sports</h4>
                     </div>
                     <div class="col-sm-4 col-xs-12">
-                        <p class="counter start" data-to="5" data-speed="1500">0</p>
-                        <h4>Engaging Hobbies<br><br>Ask me about them!</h4>
+                        <p class="counter start" data-to="100" data-speed="1500">0</p>
+                        <h4>Percent Committed!<br><br>Inquire Below:</h4>
                     </div>
                 </div>
             </div>
