--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <div class="row">
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/uncommon-core-logo.jpg" class="img-res" alt="">
+                            <img src="kid_buu.png" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Uncommon Core</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span class="glyphicon glyphicon-eye-open"></span></a>
