added email subject line in mailto

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 <!--                            <textarea name="message" id="message" class="form-control" placeholder="Message" required></textarea>-->
 <!--                        </div>-->
 <!--                    </div>-->
-                    <a class="btn btn-border" href="mailto:ost@alumni.cmu.edu?" subject="Message from Portfolio Website"  type="submit">Email <span class="glyphicon glyphicon-send"></span></a>
+                    <a class="btn btn-border" href="mailto:ost@alumni.cmu.edu?subject=Message from ghoozie.tk"  type="submit">Email <span class="glyphicon glyphicon-send"></span></a>
                 </form>
             </div>
         </section><!-- /.section-form -->
