added "click glyphicon to learn more"

--- a/index.html
+++ b/index.html
@@ -208,6 +208,11 @@
             <div class="container">
                 <div class="text-center">
                     <h3>Current Projects</h3>
+                    <table align="center"><tr>
+                        <td><h5>Click the</h5></td>
+                        <td><span class="glyphicon glyphicon-eye-open"></span></td>
+                        <td><h5>to learn more</h5></td>
+                    </tr></table>
                     <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                 </div>
                 <div class="row">
