sweet sweet image changes

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 </div>
             
                 <div class="col-md-6 text-right">
-                    <img src="oliver_pic.jpg" alt="oliver-terrell">
+                    <img src="assets/img/oliver.jpg" alt="oliver-terrell">
                 </div>
 
             </div>
@@ -218,7 +218,7 @@
                 <div class="row">
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="kid_buu.png" class="img-res" alt="">
+                            <img src="assets/img/kid_buu.png" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Uncommon Core</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -238,7 +238,7 @@
                     </div>
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/delitor-logo.png" class="img-res" alt="">
+                            <img src="assets/img/delitor-small.png" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Delitor</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -349,7 +349,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/uncommon-core-logo.jpg" alt="uncommon core">
+            <img class="img-res" src="assets/img/UClogo.jpg" alt="uncommon core">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Uncommon Core</h4>
@@ -385,7 +385,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/delitor-logo.png" alt="">
+            <img class="img-res" src="assets/img/delitor-graphic.png" alt="">
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Delitor</h4>
