new resume and new buttons

--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                     <h1>Oliver Terrell</h1>
                     <div class="page-scroll">
                         <p class="job-title">Available for Full-Time Positions</p>
-                        <a href="#contact" class="btn btn-fill ">Contact Me</a>
+                        <a href="#contact" class="btn btn-border">Contact Me</a>
                         <div class="clearfix visible-xxs"></div>
-                        <a href="#about" class="btn btn-border">Explore More</a>
+                        <a href="https://ghoozie.tk/oliver_resume.pdf" class="btn btn-fill" target="_blank">View Resumé</a>
                     </div>
                 </div>
             
@@ -113,7 +113,7 @@
                             Author @ <a href="http://www.square1system.com" target="_blank">Square1™</a><br><br>
                             Intern @ <a href="https://www.delitor.com" target="_blank">Delitor</a><br>
                             </p>
-                        <a href="https://ghoozie.tk/oliver_resume.pdf" class="btn btn-fill" target="_blank" download>Download my cv</a>
+                        <a href="https://ghoozie.tk/oliver_resume.pdf" class="btn btn-fill" target="_blank" download>Download Resumé</a>
                     </div>
                 </div>
             </div>
