--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <div class="col-md-6">
                     <h1>Oliver Terrell</h1>
                     <div class="page-scroll">
-                        <p class="job-title">Available for Full-Time Positions</p>
+                        <p class="job-title">Software Engineer, Bachelor of Science @ CMU</p>
                         <a href="#contact" class="btn btn-border">Contact Me</a>
                         <div class="clearfix visible-xxs"></div>
                         <a href="https://ghoozie.tk/oliver_resume.pdf" class="btn btn-fill" target="_blank">View Resumé</a>
@@ -108,12 +108,12 @@
                         <h2>About</h2>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                         <p>Carnegie Mellon University 2019<br>Neuroscience<br><br>
-                            Integrative Bodywork School of Massage Therapy 2015<br><br>
-                            Developer @ <a href="https://uncommoncore.io" target="_blank">Uncommon Core</a><br><br>
+                            Integrative Bodywork School of Massage Therapy 2015<br>Massage Therapist<br><br>
+                            Software Developer @ <a href="https://uncommoncore.io" target="_blank">Uncommon Core</a><br><br>
                             Author @ <a href="http://www.square1system.com" target="_blank">Square1™</a><br><br>
                             Intern @ <a href="https://www.delitor.com" target="_blank">Delitor</a><br>
                             </p>
-                        <a href="https://ghoozie.tk/oliver_resume.pdf" class="btn btn-fill" target="_blank" download>Download Resumé</a>
+                        <a href="https://ghoozie.tk/oliver_resume.pdf" class="btn btn-fill" target="_blank">View Resumé</a>
                     </div>
                 </div>
             </div>
@@ -176,31 +176,78 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <h3>Python Library Proficiencies</h3>
+                        <h3>Highlighted Skills</h3>
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
-                            <img src="assets/img/selenium-logo.png" width="50" height="45" alt="Selenium with Python">
-                            <h4>Selenium</h4>
-                            <p>With Uncommon Core, wrote extensive automated testing functions using Selenium that cleanly and quickly allowed our team to move through developmental phase.</p>
+                            <img src="assets/img/python-logo.png" width="auto" height="55" alt="python">
+                            <h4>Python</h4>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
-                            <img src="assets/img/scikit-learn-logo-small.png" width="124" height="45" alt="scikit-learn">
-                            <h4>skLearn</h4>
-                            <p>Enjoying learning how to use skLearn to its full potential. skLearn makes it simple to code a basic ML network, but to write really good networks is a challenge I embrace.</p>
+                            <img src="assets/img/php-logo.jpg" width="auto" height="55" alt="php">
+                            <h4>PHP</h4>
                         </div><!-- /.service -->
                     </div>
                     <div class="col-sm-4">
                         <div class="service">
-                            <img src="assets/img/pygame-logo.gif" width="152" height="45" alt="NumPy">
-                            <h4>PyGame</h4>
-                            <p>As a pet project I am developing an adventure game using a lot of PyGame. The game will be hosted on the web and hopefully very fun to play! Stay tuned for further developments.</p>
+                            <img src="assets/img/mysql-logo.png" width="auto" height="55" alt="MySQL">
+                            <h4>MySQL</h4>
                         </div><!-- /.service -->
                     </div>
                 </div>
+<!-- Second Row of Services -->
+                <div class="row">
+                    <div class="col-md-12">
+                    <br><br>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="service">
+                            <img src="assets/img/selenium-logo.png" width="auto" height="55" alt="selenium">
+                            <h4>Selenium</h4>
+                        </div><!-- /.service -->
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="service">
+                            <img src="assets/img/kubernetes-logo.png" width="auto" height="55" alt="kubernetes">
+                            <h4>Kubernetes</h4>
+                        </div><!-- /.service -->
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="service">
+                            <img src="assets/img/docker-logo.png" width="auto" height="55" alt="docker">
+                            <h4>Docker</h4>
+                        </div><!-- /.service -->
+                    </div>
+                </div>
+<!-- Third Row of Services -->
+<!--                <div class="row">-->
+<!--                    <div class="col-md-12">-->
+<!--                    <br><br>-->
+<!--                    </div>-->
+<!--                    <div class="col-sm-4">-->
+<!--                        <div class="service">-->
+<!--                            <img src="assets/img/selenium-logo.png" width="auto" height="55" alt="Selenium with Python">-->
+<!--                            <h4>Selenium</h4>-->
+<!--                        </div>&lt;!&ndash; /.service &ndash;&gt;-->
+<!--                    </div>-->
+<!--                    <div class="col-sm-4">-->
+<!--                        <div class="service">-->
+<!--                            <img src="assets/img/kubernetes-logo.png" width="auto" height="55" alt="kubernetes">-->
+<!--                            <h4>Kubernetes</h4>-->
+<!--                        </div>&lt;!&ndash; /.service &ndash;&gt;-->
+<!--                    </div>-->
+<!--                    <div class="col-sm-4">-->
+<!--                        <div class="service">-->
+<!--                            <img src="assets/img/mysql-logo.png" width="auto" height="55" alt="MySQL">-->
+<!--                            <h4>MySQL</h4>-->
+<!--                        </div>&lt;!&ndash; /.service &ndash;&gt;-->
+<!--                    </div>-->
+<!--                </div>-->
+
+
             </div>
         </section><!-- /.secton-services -->
 
