--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    
+                    <a href="#"><img src="assets/img/ghoozie.png" width="160px"></a>
 
                 </div><!-- /.navbar-header -->
 
