--- a/index.html
+++ b/index.html
@@ -91,9 +91,9 @@
             <div class="row">
 
                 <div class="col-md-6">
-                    <h1>Oliver Terrell</h1>
+                    <h1 class="main-name">Oliver Terrell</h1>
                     <div class="page-scroll">
-                        <p class="job-title">Software Engineer, Bachelor of Science @ CMU</p>
+                        <p class="job-title">Software Developer/Co-Founder of Greenstar Group</p>
                         <a href="#contact" class="btn btn-border">Contact Me</a>
                         <div class="clearfix visible-xxs"></div>
                         <a href="https://ghoozie.tk/oliver_resume.pdf" class="btn btn-fill" target="_blank">View Resumé</a>
@@ -118,6 +118,8 @@
                         <img src="assets/img/lines.svg" class="img-lines" alt="lines">
                         <p>Carnegie Mellon University 2019<br>Neuroscience<br><br>
                             Integrative Bodywork School of Massage Therapy 2015<br>Massage Therapist<br><br>
+                            <img src="assets/img/lines.svg" class="img-lines" alt="line" width="40"><br>
+                            Software Developer/Co-Founder @ Greenstar Group Incorporated<br><br>
                             Software Developer @ <a href="https://uncommoncore.io" target="_blank">Uncommon Core</a><br><br>
                             Author @ <a href="http://www.square1system.com" target="_blank">Square1™</a><br><br>
                             Intern @ <a href="https://www.delitor.com" target="_blank">Delitor</a><br>
