main text bg styles

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="container">
             <div class="row">
 
-                <div class="col-md-6">
+                <div class="col-md-6 ghoozie-text-bg">
                     <h1 class="main-name">Oliver Terrell</h1>
                     <div class="page-scroll">
                         <p class="job-title">Software Developer/Co-Founder of Greenstar Group</p>
@@ -101,7 +101,7 @@
                 </div>
             
                 <div class="col-md-6 text-right">
-                    <img src="assets/img/oliver.jpg" alt="oliver-terrell">
+                    <img src="assets/img/oliver.jpg" alt="oliver-terrell" style="border: 3px solid #eee; height:98%">
                 </div>
 
             </div>
