media test orig

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                 </div>
             
                 <div class="col-md-6 text-right">
-                    <img src="assets/img/oliver.jpg" alt="oliver-terrell" style="border: 3px solid #eee; height:98%">
+                    <img src="assets/img/oliver.jpg" alt="oliver-terrell" style="border: 3px solid #eee; height:20">
                 </div>
 
             </div>
