updates, still need skills boxes updates (flask, etc)

--- a/index.html
+++ b/index.html
@@ -119,10 +119,9 @@
                         <p>Carnegie Mellon University 2019<br>Neuroscience<br><br>
                             Integrative Bodywork School of Massage Therapy 2015<br>Massage Therapist<br><br>
                             <img src="assets/img/lines.svg" class="img-lines" alt="line" width="40"><br>
-                            Software Developer/Co-Founder @ Greenstar Group Incorporated<br><br>
+                            Software Developer/Co-Founder @ <a href="https://www.greenstargroup.org">Greenstar Group, Inc.</a><br><br>
                             Software Developer @ <a href="https://uncommoncore.io" target="_blank">Uncommon Core</a><br><br>
                             Author @ <a href="http://www.square1system.com" target="_blank">Square1™</a><br><br>
-                            Intern @ <a href="https://www.delitor.com" target="_blank">Delitor</a><br>
                             </p>
                         <a href="https://ghoozie.tk/oliver_resume.pdf" class="btn btn-fill" target="_blank">View Resumé</a>
                     </div>
@@ -276,7 +275,17 @@
                 <div class="row">
                     <div class="col-md-4 col-xs-6">
                         <div class="portfolio-item">
-                            <img src="assets/img/kid_buu.png" class="img-res" alt="">
+                            <img src="assets/img/gs_square.png" class="img-res" alt="">
+                            <div class="portfolio-item-info">
+                                <h4>Greenstar Group, Inc.</h4>
+                                <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span class="glyphicon glyphicon-eye-open"></span></a>
+                                <a href="https://www.greenstargroup.org" target="_blank"><span class="glyphicon glyphicon-link"></span></a>
+                            </div><!-- /.portfolio-item-info -->
+                        </div><!-- /.portfolio-item -->
+                    </div>
+                    <div class="col-md-4 col-xs-6">
+                        <div class="portfolio-item">
+                            <img src="assets/img/UClogo.jpg" class="img-res" alt="">
                             <div class="portfolio-item-info">
                                 <h4>Uncommon Core</h4>
                                 <a href="#" data-toggle="modal" data-target="#portfolioItem1"><span class="glyphicon glyphicon-eye-open"></span></a>
@@ -294,16 +303,7 @@
                             </div><!-- /.portfolio-item-info -->
                         </div><!-- /.portfolio-item -->
                     </div>
-                    <div class="col-md-4 col-xs-6">
-                        <div class="portfolio-item">
-                            <img src="assets/img/delitor-small.png" class="img-res" alt="">
-                            <div class="portfolio-item-info">
-                                <h4>Delitor</h4>
-                                <a href="#" data-toggle="modal" data-target="#portfolioItem3"><span class="glyphicon glyphicon-eye-open"></span></a>
-                                <a href="https://www.delitor.com" target="_blank"><span class="glyphicon glyphicon-link"></span></a>
-                            </div><!-- /.portfolio-item-info -->
-                        </div><!-- /.portfolio-item -->
-                    </div>
+
 <!--                    <div class="col-md-4 col-xs-6">-->
 <!--                        <div class="portfolio-item">-->
 <!--                            <img src="assets/img/portfolio-4.jpg" class="img-res" alt="">-->
@@ -411,7 +411,7 @@
           </div>
           <div class="modal-body">
             <h4 class="modal-title">Uncommon Core</h4>
-            <p>Uncommon Core is the AI solution our educational system needs in America. We use machine learning networks to create and grade schoolwork packets for math students at the elementary school level, all while delivering a clean and easy interface for parents and teachers to keep track of their kids. Let Uncommon Core do the grunt work so you can focus on teaching concepts. Build love and confidence in the classroom and let us handle the menial details.</p>
+            <p>At UncommonCore, we used machine learning networks to create and grade schoolwork packets for math students at the elementary school level, all while delivering a clean and easy interface for parents and teachers to keep track of their kids. As part of this project, I developed many general tools for MySQL database interfacing in both Python and PHP, as well as created a library of modular automation tools for web development.</p>
           </div>
           <div class="modal-footer">
             <a href="https://uncommoncore.io" class="btn btn-fill" target="_blank">Visit Page</a>
@@ -443,14 +443,14 @@
         <div class="modal-content">
           <div class="modal-header">
             <a class="close" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span></a>
-            <img class="img-res" src="assets/img/delitor-graphic.png" alt="">
+            <img class="img-res" src="assets/img/gs_square.png" alt="">
           </div>
           <div class="modal-body">
-            <h4 class="modal-title">Delitor</h4>
-            <p>Working with the founder of Delitor, ex Armed Forces Serviceman Glenn Devitt, I am assuming an unpaid internship role with his upcoming project aimed at attacking the issue of soldier suicide. Delitor has had great success in its efforts to end child trafficking and I am thrilled to be working on this new project with them as I learn blackhat-style coding modalities.</p>
+            <h4 class="modal-title">Greenstar Group, Inc.</h4>
+            <p>Co-Founder, COO, and Software Developer of Greenstar Group, Inc. Greenstar Group is a financial software company that builds customized software tools for private wealth managers. We utilized a Flask web framework to deliver product that automatically scraped financial data from Yahoo Finance, ran it through a quadratic programmer in python, ported to a variety of MplD3 graphs, and rendered results into a LaTeX template for professional use. Resolved cross-machine dependencies via Docker and hosted containers on AWS.</p>
           </div>
           <div class="modal-footer">
-            <a href="https://www.delitor.com" target="_blank" class="btn btn-fill">Visit Page</a>
+            <a href="https://www.greenstargroup.org" target="_blank" class="btn btn-fill">Visit Page</a>
           </div>
         </div><!-- /.modal-content -->
       </div><!-- /.modal-dialog -->
