--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                         <a href="#contact" class="btn btn-border">Contact Me</a>
                         <div class="clearfix visible-xxs"></div>
                         <a href="https://ghoozie.tk/oliver_resume.pdf" class="btn btn-fill" target="_blank">View Resumé</a>
+                        <a href="https://www.linkedin.com/in/oliver-terrell-9124a580/" class="btn btn-primary" target="_blank">LinkedIn</a>
                     </div>
                 </div>
             
