--- a/index.html
+++ b/index.html
@@ -92,17 +92,18 @@
 
                 <div class="col-md-6 ghoozie-text-bg">
                     <h1 class="main-name">Oliver Terrell</h1>
-                    <div class="page-scroll">
+                    <div class="page-scroll" style="text-align:center;">
                         <p class="job-title">Software Developer/Co-Founder of Greenstar Group</p>
                         <a href="#contact" class="btn btn-border">Contact Me</a>
                         <div class="clearfix visible-xxs"></div>
                         <a href="https://ghoozie.tk/oliver_resume.pdf" class="btn btn-fill" target="_blank">View Resumé</a>
+                        <div class="clearfix visible-xxs"></div>
                         <a href="https://www.linkedin.com/in/oliver-terrell-9124a580/" class="btn btn-primary" target="_blank">LinkedIn</a>
                     </div>
                 </div>
             
-                <div class="col-md-6 text-right">
-                    <img src="assets/img/oliver.jpg" alt="oliver-terrell" style="border: 3px solid #eee; height:20">
+                <div class="col-md-6" style="margin-right:auto;margin-left:auto;">
+                    <img src="assets/img/oliver.jpg" alt="oliver-terrell" class="img-fluid" style="border:3px solid #fff8e7;">
                 </div>
 
             </div>
