--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
         <div class="container">
             <div class="row">
 
-                <div class="col-md-6 ghoozie-text-bg">
+                <div class="col-md-6 ghoozie-text-bg" style="text-align:center;">
                     <h1 class="main-name">Oliver Terrell</h1>
-                    <div class="page-scroll" style="text-align:center;">
+                    <div class="page-scroll">
                         <p class="job-title">Software Developer/Co-Founder of Greenstar Group</p>
                         <a href="#contact" class="btn btn-border">Contact Me</a>
                         <div class="clearfix visible-xxs"></div>
